# codeclaw

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  codeclaw.example.toml
.github/workflows/: ci.yml
docs/: acceptance-use-cases.md  architecture.md  community-post-kit-v0.13.1.md  customer-handover-checklist.md  faq.md  gateway-protocol.md  im-gateway-rollout-checklist.md  incident-response-playbook.md  operations-guide.md  operator-runbook.md  ops-dashboard-spec.md  product-strategy.md  project-delivery.md  project-plan.md  quickstart-card-v0.13.1.md  release-announcement-v0.13.0.md  release-announcement-v0.13.1.md  roadmap.md  system-architecture-v2.md  technical-roadmap.md  upgrade-notes-v0.13.0.md  upgrade-notes-v0.13.1.md  user-guide.md
scripts/: handover_pack.sh  release_check.sh
src/: app_server.rs  config.rs  controller.rs  gateway.rs  logging.rs  main.rs  orchestration.rs  repl.rs  service.rs  session.rs  state.rs  ui.rs
templates/: customer-handover-template.md  im-gateway-rollout-template.md  incident-report-template.md
