[package]
name = "codeclaw"
version = "0.7.0"
edition = "2021"
description = "Terminal-first control plane for Codex sessions across large codebases"
repository = "https://github.com/nikkofu/codeclaw"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.43", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
